apps/3-risk-compliance/2-fraud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-svc
  namespace: grc
spec:
  type: ClusterIP
  selector:
    app: fraud-svc
  ports:
    - port: 6061
      targetPort: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-svc
  namespace: grc
  labels:
    app: fraud-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-svc
  template:
    metadata:
      labels:
        app: fraud-svc
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/connect-service-upstreams: 'payment-gateway-svc:9091'
        # consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: fraud-svc
      containers:
        - name: fraud-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9091
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
