apps/3-risk-compliance/5-fraud-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fraud-httproute
  namespace: grc
spec:
  parentRefs:
  - name: grc-kong-api-gateway
    namespace: grc
  hostnames:
  - "grc.hellocloudbank.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: fraud-svc
      port: 6061
